Fix: Bug not showing filtered results

--- a/sources/static/styles.css
+++ b/sources/static/styles.css
@@ -35,7 +35,7 @@ h1 {
 .search__input {
     width: 50%;
     padding: 12px 24px;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 18px;
     transition: all 250ms ease-in-out ;
     margin: 20px auto;
